Project

General

Profile

Actions

Bug #20562

closed

Monitor's "perf dump cluster" values are no longer maintained

Added by Greg Farnum almost 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
Administration/Usability
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Monitor
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We have a PerfCounters collection in the monitor which maintains cluster aggregate data like storage space available, and most of its values are maintained in the PGMonitor/PGMap. With the switch to ceph-mgr, that's all dead.

We need to either hook them up in the MgrStatMonitor, or rip them out. See https://www.mail-archive.com/ceph-users@lists.ceph.com/msg38717.html


Related issues 1 (0 open1 closed)

Has duplicate RADOS - Bug #20563: mon: fix clsuter-level perfcounters to pull from PGMapDigestDuplicate07/10/2017

Actions
Actions #1

Updated by Greg Farnum almost 7 years ago

  • Has duplicate Bug #20563: mon: fix clsuter-level perfcounters to pull from PGMapDigest added
Actions #2

Updated by Greg Farnum almost 7 years ago

  • Status changed from New to In Progress
  • Assignee set to Greg Farnum
> >>       I need a little help with fixing some errors I am having.
> >>               
> >>       After upgrading from Kraken im getting incorrect values reported
> >>       on   
> >>       placement groups etc. At first I thought it is because I was
> >>       changing
> >>       the public cluster ip address range and modifying the monmap
> >>       directly.
> >>       But after deleting and adding a monitor this ceph daemon dump is
> >>       still
> >>       incorrect.
> >> 
> >> 
> >> 
> >> 
> >>       ceph daemon mon.a perf dump cluster
> >>       {   
> >>           "cluster": {
> >>               "num_mon": 3,
> >>               "num_mon_quorum": 3,
> >>               "num_osd": 6,
> >>               "num_osd_up": 6,
> >>               "num_osd_in": 6,
> >>               "osd_epoch": 3842,
> >>               "osd_bytes": 0,
> >>               "osd_bytes_used": 0,
> >>               "osd_bytes_avail": 0,
> >>               "num_pool": 0,
> >>               "num_pg": 0,
> >>               "num_pg_active_clean": 0,
> >>               "num_pg_active": 0,
> >>               "num_pg_peering": 0,
> >>               "num_object": 0,
> >>               "num_object_degraded": 0,
> >>               "num_object_misplaced": 0,
> >>               "num_object_unfound": 0,
> >>               "num_bytes": 0,
> >>               "num_mds_up": 1,
> >>               "num_mds_in": 1,
> >>               "num_mds_failed": 0,
> >>               "mds_epoch": 816
> >>           }
> >>
> >>       }
> >>
Actions #3

Updated by Greg Farnum almost 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Greg Farnum almost 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF