mon: maintain the "cluster" PerfCounters when using ceph-mgr instead of PGMonitor

Fixes: http://tracker.ceph.com/issues/20562

Signed-off-by: Greg Farnum <gfarnum@redhat.com>